# CGRA_openGL_Base

./: README.md  cgra_parse.py  f5.sh
work/: CMakeLists.txt
work/ext/imgui/: CMakeLists.txt
work/ext/stb/: stb.c
work/res/shaders/: aabb.glsl  axis.glsl  flat_model_normal_color.glsl  simple_grey.glsl  simple_texture.glsl
work/src/: CMakeLists.txt  application.cpp  application.hpp  cgra_math.hpp  cgra_math_test.cpp  geometry.cpp  geometry.hpp  imageLoader.hpp  main.cpp  openGL.hpp  opengl.hpp  simpleGUI.cpp  simpleGUI.hpp  simpleShader.hpp  simple_gui.cpp  simple_gui.hpp  simple_image.hpp  simple_shader.hpp  simple_vao.cpp  simple_vao.hpp
work/src/cgra/: CMakeLists.txt  cgra_gui.cpp  cgra_gui.hpp  cgra_image.hpp  cgra_mesh.cpp  cgra_mesh.hpp  cgra_shader.cpp  cgra_shader.hpp  cgra_util.hpp  cgra_vao.cpp  cgra_vao.hpp  cgra_wavefront.hpp  cgra_wavefront_loader.hpp
work/src/simple/: CMakeLists.txt  simple_gui.cpp  simple_gui.hpp  simple_image.hpp  simple_shader.hpp  simple_vao.cpp  simple_vao.hpp
